--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,16 +2,21 @@
 <html>
     <head>
         <title>rs-chat</title>
+        <link rel="stylesheet" type="text/css" href="./css/styles.css">
         <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-        <script src="./scripts/rs.js"></script>
-        <script src="./scripts/main.js"></script>
+        <script src="./js/rs.js"></script>
+        <script src="./js/main.js"></script>
     </head>
     <body>
-        <p><span id="connections">0</span> connections</p>
-        <ul id="messages"></ul>
-        <form action="">
-            <input id="post" autocomplete="off"/><button>Send</button>
-        </form>
+        <div id="header">
+            <p id="connections">0</p>
+        </div>
+        <div id="messages"></div>
+        <div id="footer">
+            <form action="">
+                <textarea id="post" autocomplete="off"></textarea>
+            </form>
+        </div>
     </body>
 </html>
