Add basic and crappy UI username functionality.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,6 +18,9 @@
             <form action="">
                 <textarea id="post" autocomplete="off"></textarea>
             </form>
+            <form action="">
+                <textarea id="uname"></textarea>
+            </form>
         </div>
     </body>
 </html>
